<resources>
    <string name="app_name">log_in_page</string>
    <string name="log_in">Log in</string>
    <string name="email_address">Email Address</string>
    <string name="hi_welcome">Hi! Welcome</string>
    <string name="forgotten_your_password">Forgotten your password ?</string>
    <string name="create_an_account">Create an Account</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
</resources>